# todo-cli

./: README.md  pyproject.toml
todo/: main.py
todo_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
