[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "todo-cli"
version = "0.2.0"
description = "A simple CLI app to manage todos (add, list, remove)"
authors = [
  { name = "Fahrurrozi", email = "fahrurrozi@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
  "click >=8.0"
]

[project.scripts]
todo = "todo.main:cli"

[tool.black]
line-length = 88
